Update CI/CD workflow for Node setup and deployment

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,10 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
+      
       - run: npm ci
+      
       - run: npm test
 
   deploy:
@@ -33,9 +36,13 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-pages@v3
+      
+      - uses: actions/configure-pages@v4
+      
       - uses: actions/upload-pages-artifact@v2
         with:
           path: 'dist'
-      - uses: actions/deploy-pages@v4
+      
+      - name: Deploy to GitHub Pages
         id: deployment
+        uses: actions/deploy-pages@v4
