--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,45 +14,27 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run tests
-        run: npm test -- --passWithNoTests
+      - run: npm ci
+      - run: npm test -- --passWithNoTests
 
   build:
     runs-on: ubuntu-latest
     needs: test
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Build application
-        run: npm run build 2>/dev/null || echo "No build script found, creating dist folder"
-      
-      - name: Create dist folder if not exists
-        run: mkdir -p dist && echo "GitHub Pages deployment" > dist/index.html
-      
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - run: npm ci
+      - run: npm run build 2>/dev/null || echo "No build script"
+      - run: mkdir -p dist && echo "GitHub Pages" > dist/index.html
+      - uses: actions/upload-artifact@v4
         with:
           name: github-pages
           path: dist/
@@ -69,20 +51,14 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v4
         with:
           name: github-pages
-          path: ./
-      
-      - name: Configure Pages
-        uses: actions/configure-pages@v4
-      
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
+          path: ./github-pages
+      - uses: actions/configure-pages@v4
+      - uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'
-      
+          path: 'github-pages'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
